MilestoneRFAFullSandBox/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>BOD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COA_Acronym__c</fullName>
        <label>COA Acronym</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Function__c</fullName>
        <label>COA Function</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CokeOne</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COA_Group__c</fullName>
        <label>COA Group</label>
        <picklist>
            <picklistValues>
                <fullName>Gr.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gr.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gr.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gr.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gr.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gr.6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COA_Report_Layer__c</fullName>
        <label>COA Report Layer</label>
        <picklist>
            <picklistValues>
                <fullName>L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CokeOne_Manager__c</fullName>
        <label>CokeOne Manager</label>
        <relationshipName>CokeOne_User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>CokeOne_Project__c</fullName>
        <label>CokeOne Project</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CokeOne_Resource__c</fullName>
        <label>CokeOne Resource</label>
        <picklist>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CokeOne__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CokeOne Project Member</description>
        <label>CokeOne</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>When you update an individual, please indicate the date, reason for update, update content and update user. / 個別で更新する場合は、日付・更新理由・更新内容・更新者を明記してください。</description>
        <inlineHelpText>Required Fields: date, reason for update, update content and update user. / 必須入力: 日付・更新理由・更新内容・更新者</inlineHelpText>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Name_E__c</fullName>
        <label>Job Name E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name_J__c</fullName>
        <label>Job Name J</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title_E__c</fullName>
        <label>Job Title E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Function_E__c</fullName>
        <label>L2 Function E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3_Function_E__c</fullName>
        <label>L3 Function E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L4_Function_E__c</fullName>
        <label>L4 Function E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_level__c</fullName>
        <label>L-level</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_E__c</fullName>
        <label>Location E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_J__c</fullName>
        <label>Location J</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFA_Agent_1__c</fullName>
        <label>RFA Agent 1</label>
        <relationshipName>RFA_Agent_1</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>RFA_Agent_2__c</fullName>
        <label>RFA Agent 2</label>
        <relationshipName>RFA_Agent_2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>RFA_Agent_3__c</fullName>
        <label>RFA Agent 3</label>
        <relationshipName>RFA_Agent_3</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>UserID_18</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>COA_Group__c</columns>
        <columns>COA_Acronym__c</columns>
        <columns>L_level__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべてのユーザ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BOD_Member</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BOD__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BOD Member</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CokeOne_Project_Members</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CokeOne_Resource__c</columns>
        <columns>CokeOne_Manager__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CokeOne_Project__c</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>COA_Acronym__c</columns>
        <columns>L2_Function_E__c</columns>
        <columns>COA_Function__c</columns>
        <columns>COA_Group__c</columns>
        <columns>COA_Report_Layer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CokeOne__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>ccej,ccbsc,coca-cola</value>
        </filters>
        <label>CokeOne Project Members</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commercial_B1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>L3_Function_E__c</columns>
        <columns>L4_Function_E__c</columns>
        <columns>L5_Function_E__c</columns>
        <columns>L6_Function_E__c</columns>
        <columns>L7_Function_E__c</columns>
        <columns>L_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L3_Function_E__c</field>
            <operation>contains</operation>
            <value>Field Sales Operations,VM(KO)-RED</value>
        </filters>
        <label>Commercial B1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Commercial_B2</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>L3_Function_E__c</columns>
        <columns>L4_Function_E__c</columns>
        <columns>L5_Function_E__c</columns>
        <columns>L6_Function_E__c</columns>
        <columns>L7_Function_E__c</columns>
        <columns>L_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L3_Function_E__c</field>
            <operation>equals</operation>
            <value>KAM</value>
        </filters>
        <filters>
            <field>L4_Function_E__c</field>
            <operation>equals</operation>
            <value>CS Sales</value>
        </filters>
        <label>Commercial B2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Commercial_B3</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>L3_Function_E__c</columns>
        <columns>L4_Function_E__c</columns>
        <columns>L5_Function_E__c</columns>
        <columns>L6_Function_E__c</columns>
        <columns>L7_Function_E__c</columns>
        <columns>L_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L3_Function_E__c</field>
            <operation>equals</operation>
            <value>KAM</value>
        </filters>
        <filters>
            <field>L4_Function_E__c</field>
            <operation>equals</operation>
            <value>Food Sales</value>
        </filters>
        <label>Commercial B3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Commercial_B4</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>L3_Function_E__c</columns>
        <columns>L4_Function_E__c</columns>
        <columns>L5_Function_E__c</columns>
        <columns>L6_Function_E__c</columns>
        <columns>L7_Function_E__c</columns>
        <columns>L_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L3_Function_E__c</field>
            <operation>equals</operation>
            <value>Field Sales Operations</value>
        </filters>
        <filters>
            <field>L6_Function_E__c</field>
            <operation>equals</operation>
            <value>酒屋KAM開発営業部</value>
        </filters>
        <label>Commercial B4</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Commercial_B5</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>L3_Function_E__c</columns>
        <columns>L4_Function_E__c</columns>
        <columns>L5_Function_E__c</columns>
        <columns>L6_Function_E__c</columns>
        <columns>L7_Function_E__c</columns>
        <columns>L_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L3_Function_E__c</field>
            <operation>equals</operation>
            <value>VM(KO)-RED</value>
        </filters>
        <filters>
            <field>L4_Function_E__c</field>
            <operation>equals</operation>
            <value>Corporate Sales&amp;Hunter</value>
        </filters>
        <label>Commercial B5</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Commercial_B6</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>L3_Function_E__c</columns>
        <columns>L4_Function_E__c</columns>
        <columns>L5_Function_E__c</columns>
        <columns>L6_Function_E__c</columns>
        <columns>L7_Function_E__c</columns>
        <columns>L_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L3_Function_E__c</field>
            <operation>equals</operation>
            <value>Corporate KAM</value>
        </filters>
        <label>Commercial B6</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Commercial_B7</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>L3_Function_E__c</columns>
        <columns>L4_Function_E__c</columns>
        <columns>L5_Function_E__c</columns>
        <columns>L6_Function_E__c</columns>
        <columns>L7_Function_E__c</columns>
        <columns>L_level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L3_Function_E__c</field>
            <operation>equals</operation>
            <value>VM(FV)-White</value>
        </filters>
        <label>Commercial B7</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ELT</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>COA_Group__c</field>
            <operation>equals</operation>
            <value>Gr.1</value>
        </filters>
        <label>ELT</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Only_Milestone</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>EMAIL_ENCODING</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Only MilestoneUser</value>
        </filters>
        <label>Only Milestone</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RFA_Standard_User</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <columns>LOCALE</columns>
        <columns>LANGUAGE</columns>
        <columns>EMAIL_ENCODING</columns>
        <columns>TIMEZONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>RFA - Standard User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_BY_NAME</field>
            <operation>equals</operation>
            <value>Akita Junko</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <label>RFA - Standard User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RFA_Standard_User2</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <columns>LOCALE</columns>
        <columns>LANGUAGE</columns>
        <columns>EMAIL_ENCODING</columns>
        <columns>TIMEZONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/10/2013 12:00 AM</value>
        </filters>
        <label>RFA Standard User 既存</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>RFA_USER_VR01_UniqueAgentSelection</fullName>
        <active>true</active>
        <description>RFA R1 - Check for unique selection of agents in the system.</description>
        <errorConditionFormula>OR(
AND(NOT(ISBLANK(RFA_Agent_1__c)), OR(RFA_Agent_1__c == RFA_Agent_2__c, RFA_Agent_1__c == RFA_Agent_3__c)),
AND(NOT(ISBLANK(RFA_Agent_2__c)), OR(RFA_Agent_2__c == RFA_Agent_1__c, RFA_Agent_2__c == RFA_Agent_3__c)), 
AND(NOT(ISBLANK(RFA_Agent_3__c)), OR(RFA_Agent_3__c == RFA_Agent_1__c, RFA_Agent_2__c == RFA_Agent_3__c))
)</errorConditionFormula>
        <errorMessage>Same User can not be selected more than once as a Agent for the same Approver</errorMessage>
    </validationRules>
</CustomObject>